[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.6"
actix-web = { version = "4.9.0", features = ["openssl"] }
openssl = { version = "0.10" }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
once_cell = "1.19.0"
percent-encoding = "2.3.1"
askama_escape = "0.10.3"
tokio = { version = "1.40.0", features = ["macros"] }
actix-governor = "0.5"

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
